# crossy-clone

./: .gitignore  CMakeLists.txt  README.md  TODO.md  demo.txt  main.cpp
asset/: resource.h  resource.hpp  resource.rc
asset/texture/font/: isometric-pixel-art-font-arcade-game-fonts-alphabet-retro-gaming-cubic-typographic-lettering-sign-pixels-numbers-vector-set_102902-1463.avif
data/: gamestate_specs.md
docs/: documentation.md  gamestate_specs.md  setting_specs.md
game/: audio.hpp  color.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp
object/: lane.cpp  lane.hpp  player.cpp  player.hpp  traffic.cpp  traffic.hpp  vehicle.cpp  vehicle.hpp
sfx/: link
source/: main.cpp
source/game/: audio.cpp  color.hpp  game.cpp  game.hpp  scene.hpp  setting.cpp  setting.h  setting.hpp  sound.cpp  sound.hpp
source/internal/: audio.cpp  audio.hpp  color.cpp  color.hpp  engine.cpp  engine.hpp  game.cpp  game.hpp  keyboard.cpp  keyboard.hpp  lincal.cpp  lincal.hpp  setting.cpp  setting.hpp  sound.cpp  sound.hpp  speaker.cpp  speaker.hpp  texture.cpp  texture.hpp  texture_holder.cpp  texture_holder.hpp  typedef.cpp  typedef.hpp
source/object/: button.cpp  button.hpp  isometric.cpp  isometric.hpp  lane.cpp  lane.hpp  object.cpp  object.hpp  player.cpp  player.hpp  textbox.cpp  textbox.hpp  traffic.cpp  traffic.hpp  vehicle.cpp  vehicle.hpp
source/scene/: credit.cpp  credit.hpp  gameover.cpp  gameover.hpp  leaderboard.cpp  leaderboard.hpp  menu.cpp  menu.hpp  option.cpp  option.hpp  pause.cpp  pause.hpp  play.cpp  play.hpp  scene.cpp  scene.hpp  sceneRegistry.cpp  sceneRegistry.hpp  scene_registry.cpp  scene_registry.hpp  setting_scene.cpp  setting_scene.hpp
toolchain/: windows.cmake
